--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="card-body">
             <h5 class="card-title text-center">Cabin Website</h5>
 
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
 
           </div>
 
@@ -49,9 +49,9 @@
         <div class="card h-100">
           <img src="./img/portfolio/cake.png" class="card-img-top" alt="cake">
           <div class="card-body">
-            <h5 class="card-title text-center">Cake</h5>
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <h5 class="card-title text-center">Cake WebsitePreview</h5>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
           </div>
 
         </div>
@@ -60,9 +60,9 @@
         <div class="card h-100">
           <img src="./img/portfolio/circus.png" class="card-img-top" alt="circus">
           <div class="card-body">
-            <h5 class="card-title text-center">Circus</h5>
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <h5 class="card-title text-center">Circus Website</h5>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
 
           </div>
 
@@ -73,17 +73,17 @@
   </div>
 
 
-  <div class="container text-center">
+  <div class="container text-center mb-5">
 
     <div class="row g-4 mb-5">
       <div class="col">
         <div class="card h-100">
-          <img src="./img/portfolio/cabin.png" class="card-img-top" alt="cabin">
+          <img src="./img/portfolio/game.png" class="card-img-top" alt="game">
           <div class="card-body">
-            <h5 class="card-title text-center">Cabin Website</h5>
+            <h5 class="card-title text-center">Game Website</h5>
 
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
 
           </div>
 
@@ -91,22 +91,22 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="./img/portfolio/cake.png" class="card-img-top" alt="cake">
+          <img src="./img/portfolio/safe.png" class="card-img-top" alt="safe">
           <div class="card-body">
-            <h5 class="card-title text-center">Cake</h5>
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <h5 class="card-title text-center">Safe Website</h5>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
           </div>
 
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="./img/portfolio/circus.png" class="card-img-top" alt="circus">
+          <img src="./img/portfolio/submarine.png" class="card-img-top" alt="submarine">
           <div class="card-body">
-            <h5 class="card-title text-center">Circus</h5>
-            <a href="#" class="btn btn-primary mx-2">Go somewhere</a>
-            <a href="#" class="btn btn-outline-info mx-2">Go somewhere</a>
+            <h5 class="card-title text-center">Submarine</h5>
+            <a href="#" class="btn btn-primary mx-2">Preview</a>
+            <a href="#" class="btn btn-outline-info mx-2">Visit</a>
 
           </div>
 
