--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1 class="my-3">PORTFOLIO</h1>
 
     <div class="row g-4 mb-4">
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/cabin.png" class="card-img-top" alt="cabin">
           <div class="card-body">
@@ -45,7 +45,7 @@
 
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/cake.png" class="card-img-top" alt="cake">
           <div class="card-body">
@@ -56,7 +56,7 @@
 
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/circus.png" class="card-img-top" alt="circus">
           <div class="card-body">
@@ -76,7 +76,7 @@
   <div class="container text-center mb-5">
 
     <div class="row g-4 mb-5">
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/game.png" class="card-img-top" alt="game">
           <div class="card-body">
@@ -89,7 +89,7 @@
 
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/safe.png" class="card-img-top" alt="safe">
           <div class="card-body">
@@ -100,7 +100,7 @@
 
         </div>
       </div>
-      <div class="col">
+      <div class="col-sm-4">
         <div class="card h-100">
           <img src="./img/portfolio/submarine.png" class="card-img-top" alt="submarine">
           <div class="card-body">
