--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
   </div>
 
 
+  <div class="container-fluid bg-info mx-0">
+    <div class="row align-items-center ">
+      <div class="col-12 sm-6 w-100 mx-0">
+       
+
+      </div>
+    </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
