--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col-12 text-center mx-0 mb-4">
           <h1>WANT AN OFFER?</h1>
         </div>
-        <div class="col-12">
+        <div class="col-8 align-items-center">
 
           <form class="row g-3">
             <div class="col-md-6">
