--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         <div class="col-12 text-center mx-0 mb-4">
           <h1>WANT AN OFFER?</h1>
         </div>
-        <div class="col-8 align-items-center">
+        <div class="col-8 align-items-center text-center">
 
-          <form class="row g-3">
+          <form class="row justify-content-md-center g-3">
             <div class="col-md-6">
               <label for="inputEmail4" class="form-label">Email</label>
               <input type="email" class="form-control" id="inputEmail4">
