--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
   <div class="container-fluid bg-info mx-0">
       <div class="row align-items-center ">
         
-        <div class="col-12 text-center mx-0 mb-4">
+        <div class="col-12 text-center mx-3 mb-4 ">
           <h1>WANT AN OFFER?</h1>
         </div>
-        <div class="col-8 align-items-center text-center">
+        <div class="col-8 ml-5">
 
           <form class="row justify-content-md-center g-3">
             <div class="col-md-6">
