--- a/index.html
+++ b/index.html
@@ -125,17 +125,39 @@
       </div>
       <div class="col-8 ml-5 mb-5">
 
-        <form class="row justify-content-md-center g-1">
-          <div class="row">
-            <div class="col-6">
-              <label for="firstName" class="form-label">First Name</label>
-              <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-            </div>
-            <div class="col-6">
-              <label for="lastName" class="form-label">Last Name</label>
-              <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-            </div>
+        <div class="row justify-content-center g-1 mx-3">
+
+          <div class="col-6">
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="text" class="form-control" placeholder="First name" aria-label="First name">
           </div>
+
+          <div class="col-6">
+            <label for="lastName" class="form-label">Last Name</label>
+            <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+          </div>
+
+          <div class="col-6">
+            <label for="inputEmail4" class="form-label">Email</label>
+            <input type="email" class="form-control" id="inputEmail4">        
+          </div>
+
+          <div class="col-6">
+            <label for="hoursReq" class="form-label">Hours Requested</label>
+            <input type="number" class="form-control" placeholder="hoursReq" aria-label="Hours Requested">
+          </div>
+
+          <div class="col-6">
+            <label for="typeofwork" class="form-label">Type of work</label>
+            <input type="text" class="form-control" placeholder="Type of Work" aria-label="Type of Work">
+          </div>
+
+          <div class="col-6">
+            <label for="dscode" class="form-label">Discount code</label>
+            <input type="text" class="form-control" placeholder="Discount code" aria-label="Discount code">
+          </div>
+
+        </div>
       </div>
 
 
