text Area fatto

--- a/index.html
+++ b/index.html
@@ -144,17 +144,24 @@
 
           <div class="col-6">
             <label for="hoursReq" class="form-label">Hours Requested</label>
-            <input type="number" class="form-control" placeholder="hoursReq" aria-label="Hours Requested">
+            <input type="number" class="form-control" placeholder="Hours Requested" aria-label="Hours Requested">
           </div>
 
           <div class="col-6">
-            <label for="typeofwork" class="form-label">Type of work</label>
+            <label for="typeofwork" class="form-label">Type of Work</label>
             <input type="text" class="form-control" placeholder="Type of Work" aria-label="Type of Work">
           </div>
 
-          <div class="col-6">
-            <label for="dscode" class="form-label">Discount code</label>
+          <div class="col-6 mb-4">
+            <label for="dscode" class="form-label">Discount Code</label>
             <input type="text" class="form-control" placeholder="Discount code" aria-label="Discount code">
+          </div>
+
+          <div class="col-12">
+            <div class="form-outline">
+              <textarea class="form-control" id="textAreaExample" rows="4"></textarea>
+              <label class="form-label" for="textAreaExample">Message</label>
+            </div>
           </div>
 
         </div>
