--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
             </div>
           </div>
 
+          <div class="col justify-content-center m-3">
+            <button type="button" class="btn btn-warning">Send</button>
+
+          </div>
+
         </div>
       </div>
 
