forma quasi fatta

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
   <div class="container-fluid bg-info mx-0">
-    <div class="row align-items-center ">
+    <div class="row align-center ">
 
       <div class="col-12 text-center mx-3 mb-4 ">
         <h1>WANT AN OFFER?</h1>
@@ -164,9 +164,12 @@
             </div>
           </div>
 
-          <div class="col justify-content-center m-3">
+          <div class="col-8 justify-content-center m-3">
             <button type="button" class="btn btn-warning">Send</button>
 
+          </div>
+          <div class="col-12">
+            <h3>Il prezzo finale e di: 153.75</h3>
           </div>
 
         </div>
