--- a/index.html
+++ b/index.html
@@ -127,32 +127,32 @@
 
         <div class="row justify-content-center g-1 mx-3">
 
-          <div class="col-6">
+          <div class="col-6-sm-6">
             <label for="firstName" class="form-label">First Name</label>
             <input type="text" class="form-control" placeholder="First name" aria-label="First name">
           </div>
 
-          <div class="col-6">
+          <div class="col-6-sm-6">
             <label for="lastName" class="form-label">Last Name</label>
             <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
           </div>
 
-          <div class="col-6">
+          <div class="col-6-sm-6">
             <label for="inputEmail4" class="form-label">Email</label>
             <input type="email" class="form-control" id="inputEmail4">        
           </div>
 
-          <div class="col-6">
+          <div class="col-6-sm-6">
             <label for="hoursReq" class="form-label">Hours Requested</label>
             <input type="number" class="form-control" placeholder="Hours Requested" aria-label="Hours Requested">
           </div>
 
-          <div class="col-6">
+          <div class="col-6-sm-6">
             <label for="typeofwork" class="form-label">Type of Work</label>
             <input type="text" class="form-control" placeholder="Type of Work" aria-label="Type of Work">
           </div>
 
-          <div class="col-6 mb-4">
+          <div class="col-6-sm-6 mb-4">
             <label for="dscode" class="form-label">Discount Code</label>
             <input type="text" class="form-control" placeholder="Discount code" aria-label="Discount code">
           </div>
@@ -164,11 +164,11 @@
             </div>
           </div>
 
-          <div class="col-8 justify-content-center m-3">
+          <div class="col-8-md-d justify-content-center m-3">
             <button type="button" class="btn btn-warning">Send</button>
 
           </div>
-          <div class="col-12">
+          <div class="col-12-md-6">
             <h3>Il prezzo finale e di: 153.75</h3>
           </div>
 
@@ -176,6 +176,20 @@
       </div>
 
 
+    </div>
+
+  </div>
+
+
+  <div class="container-fluid bg-dark mx-0 text-muted">
+    <div class="row align-items-center ">
+      <div class="col-12 text-center mx-0 mb-5">
+        <h1>LOCATION</h1>
+        <h3>2215 John Daniel Drive</h3>
+        <h3 class="mb-4">Clark, MO 65243</h3>
+       <p>Copyright &copy; Your Website 2022</p>
+      </div>
+      
     </div>
 
   </div>
