--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="row  ">
 
       <div class="col-12 text-center mx-3 mb-4 ">
-        <h1>WANT AN OFFER?</h1>
+        <h1 class="mt-4">WANT AN OFFER?</h1>
       </div>
     </div>
     <div class="row  justify-content-center g-1 mx-3">
@@ -149,10 +149,18 @@
         <input type="number" class="form-control" placeholder="Hours Requested" aria-label="Hours Requested">
       </div>
 
-      <div class="col-sm-6">
-        <label for="typeofwork" class="form-label">Type of Work</label>
-        <input type="text" class="form-control" placeholder="Type of Work" aria-label="Type of Work">
-      </div>
+      
+       <div class="form-group col-sm-6">
+          <label for="inputState">Type of work</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <option>Frontend Development</option>
+            <option>Backend Development</option>
+            <option>Project Analisys</option>
+            <option>DevOps</option>
+          </select>
+        </div>
+       
 
       <div class="col-sm-6 mb-4">
         <label for="dscode" class="form-label">Discount Code</label>
